# llm-stream

./: .gitmodules  CHANGELOG.md  README.md  rust-analyzer.json
.github/workflows/: ci.yml
crates/llm_stream/: Cargo.toml  README.md
crates/llm_stream/assets/themes/tokyonight/: tokyonight-day.tmTheme
crates/llm_stream/src/: anthropic.rs  args.rs  config.rs  conversation.rs  error.rs  google.rs  main.rs  mistral.rs  mistral_fim.rs  ollama.rs  openai.rs  prelude.rs  printer.rs
lib/bat/src/: lib.rs
lib/llm_stream/: CHANGELOG.md  Cargo.toml  README.md
lib/llm_stream/examples/: stream_anthropic.rs  stream_copilot.rs  stream_google.rs  stream_mistral.rs  stream_mistral_fim.rs  stream_ollama.rs  stream_openai.rs
lib/llm_stream/src/: anthropic.rs  error.rs  google.rs  lib.rs  mistral.rs  mistral_fim.rs  ollama.rs  openai.rs
xtask/src/: cli.rs  main.rs  scripts.rs
