[package]
name = "llm-stream"
version = "0.3.0"
homepage = "https://github.com/cloudbridgeuy/llm-stream"
description = "Stream and interact with multiple LLMs providers from the terminal"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "llm-stream"
path = "src/main.rs"

[dependencies]
llm_stream = { version = "0.3.1", path = "../../lib/llm_stream" }
clap = { version = "4.5.16", features = ["derive", "string", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
bat = { version = "0.24.0", path = "../../lib/bat", features = [
  "os_str_bytes",
] }
thiserror = "1.0.56"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
clap-stdin = "0.5.1"
futures = "0.3.30"
spinners = "4.1.1"
atty = "0.2.14"
crossterm = "0.28.0"
config-file = "0.2.3"
tera = "1.20.0"
toml = "0.8.19"
xid = "1.1.1"
cli-table = "0.4.9"
